--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "WeiChenの主页"
 VITE_SITE_ANTHOR = "WeiChen"
 VITE_SITE_KEYWORDS = "WeiChen,个人主页"
 VITE_SITE_DES = "一个默默无闻的主页"
-VITE_SITE_URL = "nav.shweichen.top"
+VITE_SITE_URL = "WeiCHen"
 VITE_SITE_LOGO = "/images/icon/logo.png"
 
 # 百度统计（若不需要可不填）
