--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VITE_SITE_ANTHOR = "WeiChen"
 VITE_SITE_KEYWORDS = "WeiChen,个人主页"
 VITE_SITE_DES = "一个默默无闻的主页"
 VITE_SITE_URL = "WeiCHen"
-VITE_SITE_LOGO = "/images/icon/logo.png"
+VITE_SITE_LOGO = "/images/icon/lo.png"
 
 # 百度统计（若不需要可不填）
 VITE_SITE_BAIDUTONGJI = "14e9f35ff8bc67fd4bcb5f07a6e6655a"
